--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,7 +33,88 @@
   color: #e011a7;
 }
 
-.thumbnail {
-  max-width: 150px;
+/* Custom CSS */
+
+.gallery {
+  padding: 32px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
   width: 100%;
+  max-width: 1200px;
+}
+
+.thumbnail {
+  width: 100%;
+}
+
+.randomizer {
+  width: 200px;
+}
+
+.card {
+  border: 1px solid #ffffff;
+  border-radius: 16px;
+  padding: 16px;
+}
+
+.name {
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.description {
+  font-size: 1rem;
+}
+
+.trait {
+  display: inline-block;
+  padding: 4px 8px;
+  margin: 4px;
+  border-radius: 8px;
+  border: 1px solid #ffffff;
+}
+
+.type {
+  font-size: 0.6rem;
+  margin: 0;
+}
+
+.value {
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.mintButton {
+  font-size: 1.125rem;
+  font-weight: bold;
+  background-color: #e011a7;
+  margin: 16px 0;
+  padding: 16px;
+  border-radius: 16px;
+  border: 2px solid transparent;
+}
+
+.mintButton:hover {
+  border: 2px solid #ffffff;
+  cursor: pointer;
+} 
+
+@media only screen and (max-width: 1200px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
